--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,19 +1,27 @@
 .greetingForm {
+
 }
 
 .inputAndButtonContainer {
+    display: flex;
 }
 
 .error {
 }
 
 .input {
+    outline: none;
+    border: 1px solid red;
+    border-radius: 5px;
 }
 
 .input:focus {
 }
 
 .errorInput {
+    outline: none;
+    border: 1px solid cadetblue;
+    border-radius: 5px;
 }
 
 .button {
