--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,4 @@
 .loader {
     /*свг и/или анимация*/
+    background-image: url("https://pear-advert.ru/images/uploads/blog/273/new-loading.gif");
 }
